# unisettings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: systemsettings.cpp  systemsettings.h  unisettings.cpp  unisettings.h  unisettings_global.h  unisettings_macros.h
